Add bagel recipe and write README
Bagel recipe added to complete three recipes
README written to explain HTML features used on this website

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -11,7 +11,7 @@
 
   <h3>Description</h3>
   <p>For a quick and simple challah french toast. The most important thing is 
-    to use real challah, not a brioche, not an egg bread, but real braided challah.
+    to use <em>real</em> challah, not a brioche, not an egg bread, but real braided challah.
     If you're having trouble finding one, too bad, make it yourself. It is best 
     served with warm maple syrup, but anything is fine as long as it's not meat. 
     This recipe calls for dairy, and as the laws of kashrut say, no pig and goat 
