--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./recipes/french-toast.html">French Toast</a></li>
       <li><a href="./recipes/ramen-steak.html">Ramen with Steak</a></li>
+      <li><a href="./recipes/bagel.html">Bagel with Lox and Cream Cheese</a></li>
     </ul>
   </body>
 </html>
